# search_engine_cpp

./: .gitignore  CMakeLists.txt  build.sh  readme.md
include/: DocumentManager.h
src/: DocumentManager.cpp
test/: test.cpp
